# drf-encrypt-content

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
drf_encrypt_content/: __init__.py  mixins.py  rest_encrypt_content.py  serializers.py
drf_encrypt_content/management/commands/: generate_key.py
